--- a/package.json
+++ b/package.json
@@ -9,19 +9,34 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@prisma/client": "5.10.2",
+    "@vercel/analytics": "^1.2.2",
+    "class-variance-authority": "^0.7.0",
+    "clsx": "^2.1.0",
+    "emojisplosion": "^2.6.1",
+    "fuse.js": "^7.0.0",
+    "lucide-react": "^0.336.0",
+    "next": "14.1.0",
+    "prismjs": "^1.29.0",
     "react": "^18",
     "react-dom": "^18",
-    "next": "14.1.0"
+    "react-use": "^17.5.0",
+    "tailwind-merge": "^2.2.1",
+    "tailwindcss-animate": "^1.0.7"
   },
   "devDependencies": {
-    "typescript": "^5",
-    "@types/node": "^20",
+    "@types/node": "^20.11.20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
     "autoprefixer": "^10.0.1",
-    "postcss": "^8",
-    "tailwindcss": "^3.3.0",
     "eslint": "^8",
-    "eslint-config-next": "14.1.0"
+    "eslint-config-next": "14.1.0",
+    "postcss": "^8",
+    "prisma": "^5.10.2",
+    "tailwindcss": "^3.3.0",
+    "ts-node": "^10.9.2",
+    "typescript": "^5.3.3",
+    "@tailwindcss/forms": "^0.5.7",
+    "@tailwindcss/typography": "^0.5.10"
   }
 }
