--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "clsx": "^2.1.0",
     "emojisplosion": "^2.6.1",
     "fuse.js": "^7.0.0",
+    "gray-matter": "^4.0.3",
     "lucide-react": "^0.336.0",
     "next": "14.1.0",
     "prismjs": "^1.29.0",
@@ -25,6 +26,8 @@
     "tailwindcss-animate": "^1.0.7"
   },
   "devDependencies": {
+    "@tailwindcss/forms": "^0.5.7",
+    "@tailwindcss/typography": "^0.5.10",
     "@types/node": "^20.11.20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
@@ -35,8 +38,6 @@
     "prisma": "^5.10.2",
     "tailwindcss": "^3.3.0",
     "ts-node": "^10.9.2",
-    "typescript": "^5.3.3",
-    "@tailwindcss/forms": "^0.5.7",
-    "@tailwindcss/typography": "^0.5.10"
+    "typescript": "^5.3.3"
   }
 }
