--- a/package.json
+++ b/package.json
@@ -18,10 +18,16 @@
     "gray-matter": "^4.0.3",
     "lucide-react": "^0.336.0",
     "next": "14.1.0",
+    "next-mdx-remote": "^4.4.1",
+    "nodemailer": "^6.9.10",
     "prismjs": "^1.29.0",
     "react": "^18",
     "react-dom": "^18",
+    "react-intersection-observer": "^9.8.1",
+    "react-show-more-text": "^1.7.1",
     "react-use": "^17.5.0",
+    "rehype-external-links": "^3.0.0",
+    "remark-slug": "^7.0.1",
     "tailwind-merge": "^2.2.1",
     "tailwindcss-animate": "^1.0.7"
   },
@@ -29,8 +35,10 @@
     "@tailwindcss/forms": "^0.5.7",
     "@tailwindcss/typography": "^0.5.10",
     "@types/node": "^20.11.20",
+    "@types/prismjs": "^1.26.3",
     "@types/react": "^18",
     "@types/react-dom": "^18",
+    "@types/react-show-more-text": "^1.4.5",
     "autoprefixer": "^10.0.1",
     "eslint": "^8",
     "eslint-config-next": "14.1.0",
