--- a/package.json
+++ b/package.json
@@ -9,14 +9,20 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@emoji-mart/data": "^1.1.2",
+    "@emoji-mart/react": "^1.1.1",
     "@hookform/resolvers": "^3.3.4",
     "@prisma/client": "5.10.2",
+    "@radix-ui/react-dialog": "^1.0.5",
     "@radix-ui/react-label": "^2.0.2",
+    "@radix-ui/react-popover": "^1.0.7",
     "@radix-ui/react-slot": "^1.0.2",
     "@thanpolas/univ3prices": "^3.0.2",
     "@vercel/analytics": "^1.2.2",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.0",
+    "cmdk": "^0.2.1",
+    "emoji-mart": "^5.5.2",
     "emojisplosion": "^2.6.1",
     "fuse.js": "^7.0.0",
     "gray-matter": "^4.0.3",
@@ -45,6 +51,7 @@
     "@types/react": "^18",
     "@types/react-dom": "^18",
     "@types/react-show-more-text": "^1.4.5",
+    "@types/styled-components": "^5.1.34",
     "autoprefixer": "^10.0.1",
     "eslint": "^8",
     "eslint-config-next": "14.1.0",
