--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "lucide-react": "^0.336.0",
     "next": "14.1.0",
     "next-mdx-remote": "^4.4.1",
+    "next-themes": "^0.2.1",
     "nodemailer": "^6.9.10",
     "prismjs": "^1.29.0",
     "react": "^18",
@@ -39,6 +40,7 @@
     "react-use": "^17.5.0",
     "rehype-external-links": "^3.0.0",
     "remark-slug": "^7.0.1",
+    "sonner": "^1.4.1",
     "tailwind-merge": "^2.2.1",
     "tailwindcss-animate": "^1.0.7",
     "zod": "^3.22.4"
