:sparkles: Feature: Added Authentification.

--- a/package.json
+++ b/package.json
@@ -17,6 +17,12 @@
     "@radix-ui/react-label": "^2.0.2",
     "@radix-ui/react-popover": "^1.0.7",
     "@radix-ui/react-slot": "^1.0.2",
+    "@radix-ui/react-toast": "^1.1.5",
+    "@react-email/components": "0.0.15",
+    "@react-email/render": "^0.0.12",
+    "@supabase/auth-helpers-nextjs": "^0.9.0",
+    "@supabase/ssr": "^0.1.0",
+    "@supabase/supabase-js": "^2.39.7",
     "@thanpolas/univ3prices": "^3.0.2",
     "@vercel/analytics": "^1.2.2",
     "class-variance-authority": "^0.7.0",
@@ -34,6 +40,7 @@
     "prismjs": "^1.29.0",
     "react": "^18",
     "react-dom": "^18",
+    "react-email": "2.1.0",
     "react-hook-form": "^7.50.1",
     "react-intersection-observer": "^9.8.1",
     "react-show-more-text": "^1.7.1",
