--- a/package.json
+++ b/package.json
@@ -9,15 +9,23 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@auth/prisma-adapter": "^1.4.0",
     "@emoji-mart/data": "^1.1.2",
     "@emoji-mart/react": "^1.1.1",
+    "@headlessui/react": "^1.7.18",
     "@hookform/resolvers": "^3.3.4",
+    "@next-auth/prisma-adapter": "^1.0.7",
+    "@nextui-org/button": "^2.0.26",
+    "@nextui-org/react": "^2.2.9",
     "@prisma/client": "5.10.2",
     "@radix-ui/react-accordion": "^1.1.2",
+    "@radix-ui/react-avatar": "^1.0.4",
     "@radix-ui/react-dialog": "^1.0.5",
+    "@radix-ui/react-dropdown-menu": "^2.0.6",
     "@radix-ui/react-label": "^2.0.2",
     "@radix-ui/react-popover": "^1.0.7",
     "@radix-ui/react-slot": "^1.0.2",
+    "@radix-ui/react-switch": "^1.0.3",
     "@radix-ui/react-toast": "^1.1.5",
     "@react-email/components": "0.0.15",
     "@react-email/render": "^0.0.12",
@@ -31,10 +39,13 @@
     "cmdk": "^0.2.1",
     "emoji-mart": "^5.5.2",
     "emojisplosion": "^2.6.1",
+    "framer-motion": "^11.0.6",
     "fuse.js": "^7.0.0",
     "gray-matter": "^4.0.3",
+    "input-otp": "0.3.31-beta",
     "lucide-react": "^0.336.0",
     "next": "14.1.0",
+    "next-auth": "^4.24.6",
     "next-mdx-remote": "^4.4.1",
     "next-themes": "^0.2.1",
     "nodemailer": "^6.9.10",
