:sparkles: Feature: Added Code Visualizer.

--- a/package.json
+++ b/package.json
@@ -60,6 +60,7 @@
     "react-hook-form": "^7.50.1",
     "react-intersection-observer": "^9.8.1",
     "react-show-more-text": "^1.7.1",
+    "react-syntax-highlighter": "^15.5.0",
     "react-use": "^17.5.0",
     "rehype-external-links": "^3.0.0",
     "remark-slug": "^7.0.1",
@@ -77,6 +78,7 @@
     "@types/react": "^18",
     "@types/react-dom": "^18",
     "@types/react-show-more-text": "^1.4.5",
+    "@types/react-syntax-highlighter": "^15.5.11",
     "@types/styled-components": "^5.1.34",
     "autoprefixer": "^10.0.1",
     "eslint": "^8",
