--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "@radix-ui/react-slot": "^1.0.2",
     "@radix-ui/react-switch": "^1.0.3",
     "@radix-ui/react-toast": "^1.1.5",
+    "@radix-ui/react-tooltip": "^1.0.7",
     "@react-email/components": "0.0.15",
     "@react-email/render": "^0.0.12",
     "@supabase/auth-helpers-nextjs": "^0.9.0",
