:card_file_box: Migrate: Database.

--- a/package.json
+++ b/package.json
@@ -44,9 +44,11 @@
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.0",
     "cmdk": "^0.2.1",
+    "csv-parser": "^3.0.0",
     "emoji-mart": "^5.5.2",
     "emojisplosion": "^2.6.1",
     "framer-motion": "^11.0.6",
+    "fs": "0.0.1-security",
     "fuse.js": "^7.0.0",
     "gray-matter": "^4.0.3",
     "input-otp": "0.3.31-beta",
