--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "@supabase/supabase-js": "^2.39.7",
     "@thanpolas/univ3prices": "^3.0.2",
     "@vercel/analytics": "^1.2.2",
+    "adm-zip": "^0.5.10",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.0",
     "cmdk": "^0.2.1",
@@ -79,6 +80,7 @@
   "devDependencies": {
     "@tailwindcss/forms": "^0.5.7",
     "@tailwindcss/typography": "^0.5.10",
+    "@types/adm-zip": "^0.5.5",
     "@types/node": "^20.11.20",
     "@types/nodemailer": "^6.4.14",
     "@types/prismjs": "^1.26.3",
