--- a/package.json
+++ b/package.json
@@ -41,7 +41,7 @@
     "@supabase/supabase-js": "^2.39.7",
     "@thanpolas/univ3prices": "^3.0.2",
     "@vercel/analytics": "^1.2.2",
-    "adm-zip": "^0.5.10",
+    "adm-zip": "^0.5.12",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.0",
     "cmdk": "^0.2.1",
@@ -59,6 +59,7 @@
     "next-mdx-remote": "^4.4.1",
     "next-themes": "^0.2.1",
     "nodemailer": "^6.9.10",
+    "original-fs": "^1.2.0",
     "prismjs": "^1.29.0",
     "react": "^18",
     "react-dom": "^18",
