--- a/package.json
+++ b/package.json
@@ -53,6 +53,7 @@
     "fuse.js": "^7.0.0",
     "gray-matter": "^4.0.3",
     "input-otp": "0.3.31-beta",
+    "lru-cache": "^10.2.0",
     "lucide-react": "^0.336.0",
     "next": "14.1.0",
     "next-auth": "^4.24.6",
