feat: added announcement bar with a configured text

--- a/.env.example
+++ b/.env.example
@@ -23,6 +23,7 @@ GITHUB_CLIENT_ID=
 GITHUB_CLIENT_SECRET=
 
 # The secret for NextAuth
+NEXTAUTH_URL=
 NEXTAUTH_SECRET=
 
 # The email sender and server details for the second email configuration
